--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,4 +73,14 @@
     <string name="background_sync_period_dialog_title">Проверять новые посты</string>
     <string name="background_sync_period_title">Частота проверки новых постов</string>
     <string name="new_posts_notification_title">Новые посты</string>
+    
+    <string name="blog_summary_format" formatted="false">%s, автор %s, %s</string>
+    <string name="one_subscriber">%d\u00A0подписчик</string>
+    <string name="few_subscribers">%d\u00A0подписчика</string>
+    <string name="many_subscribers">%d\u00A0подписчиков</string>
+    
+    <string name="blogs_list_activity_label">Блоги</string>
+
+    <string name="tap_to_retry">Нажмите для повтора</string>
+    <string name="endless_adapter_error_hint">Ошибочка вышла</string>
 </resources>
